# OpenGL-Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.md  test.py
include/: control.hpp  icosphere.hpp  misc.hpp  procedural_meshes.hpp  raytracer.hpp  renderer.hpp  shader.hpp  util.hpp
resources/: point-intersects-triangle.fs  raytracer.fs  raytracer.vs  shader.fs  shader.vs
resources/ES/: shader.fs  shader.vs
src/: data.hpp  icosphere.cpp  lines.cpp  main.cpp  procedural_meshes.cpp  triangles.cpp
src/cubes/: Transform.hpp  data.hpp  main.cpp  shaders.hpp  textures.hpp
